new sensor folder structure created within iDynTree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
 
 add_subdirectory(core-experimental)
 add_subdirectory(core)
+add_subdirectory(sensors)
 add_subdirectory(regressors)
 add_subdirectory(model_io)
 add_subdirectory(yarp)
