--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -27,6 +27,9 @@ SOURCE_GROUP("Source Files" FILES ${IDYNTREE_CORE_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_CORE_HEADERS})
 SOURCE_GROUP("Header Files\\Private" FILES ${IDYNTREE_CORE_PRIVATE_INCLUDES})
 
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
+
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 
@@ -40,7 +43,7 @@ target_include_directories(idyntree-core PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURC
                                                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${${VARS_PREFIX}_INSTALL_INCLUDEDIR}>"
                                                 ${EIGEN3_INCLUDE_DIR})
 
-target_link_libraries(idyntree-core ${orocos_kdl_LIBRARIES})
+target_link_libraries(idyntree-core idyntree-core-exp ${orocos_kdl_LIBRARIES})
 
 set_property(TARGET idyntree-core PROPERTY PUBLIC_HEADER ${IDYNTREE_CORE_HEADERS})
 
