--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,6 @@
 macro(IDYNTREE_ADD_TOOL tool_name tool_code)
     add_executable(${tool_name} ${tool_code})
-    target_link_libraries(${tool_name} iKin idyntree-core idyntree-regressors  idyntree-model-io)
+    target_link_libraries(${tool_name} iKin idyntree-core idyntree-regressors idyntree-modelio-urdf idyntree-modelio-symoro)
     install(TARGETS ${tool_name} DESTINATION bin)
 endmacro(IDYNTREE_ADD_TOOL tool_name tool_code)
 
@@ -15,6 +15,6 @@ if(IDYNTREE_USE_ICUB_MAIN)
   find_package(ICUB)
   add_executable(urdf2dh urdf2dh)
   target_include_directories(urdf2dh PUBLIC ${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
-  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-model-io)
+  target_link_libraries(urdf2dh iKin idyntree-core idyntree-regressors  idyntree-modelio-urdf idyntree-modelio-ikin)
   install(TARGETS urdf2dh DESTINATION bin)
 endif()
