[cmake] fix included directories in OS X

--- a/model_io/symoro/CMakeLists.txt
+++ b/model_io/symoro/CMakeLists.txt
@@ -30,6 +30,9 @@ set(IDYNTREE_MODELIO_SYMORO_SOURCES src/symoro_par_import.cpp
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODELIO_SYMORO_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODELIO_SYMORO_HEADERS})
 
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
+
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 
