--- a/model_io/urdf/CMakeLists.txt
+++ b/model_io/urdf/CMakeLists.txt
@@ -29,6 +29,9 @@ set(IDYNTREE_MODELIO_URDF_SOURCES src/urdf_export.cpp
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODELIO_URDF_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_MODELIO_URDF_HEADERS})
 
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+include_directories(SYSTEM ${IDYNTREE_TREE_INCLUDE_DIRS})
+
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
 
