--- a/model_io/tests/CMakeLists.txt
+++ b/model_io/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(SYSTEM ${orocos_kdl_INCLUDE_DIRS})
 
 add_executable(check_urdf_import_export check_urdf_import_export.cpp)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/format_examples/urdf/black_icub.urdf ${CMAKE_CURRENT_BINARY_DIR}/black_icub.urdf)
-target_link_libraries(check_urdf_import_export idyntree-core idyntree-modelio-urdf ${orocos_kdl_LIBRARIES})
+target_link_libraries(check_urdf_import_export idyntree-core idyntree-modelio-urdf ${orocos_kdl_LIBRARIES} ${urdfdom_LIBRARIES})
 add_test(NAME test_urdf_import_export COMMAND check_urdf_import_export black_icub.urdf)
 
 add_executable(check_symoro_par_import_fixed_chain_regressor check_symoro_par_import_fixed_chain_regressor.cpp)
