refactor language-specific swig code

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -31,8 +31,8 @@ if(SWIG_FOUND)
         add_subdirectory(python)
     endif(IDYNTREE_USES_PYTHON)
 
-    if(IDYNTREE_USES_MATLAB OR GENERATE_MATLAB)
+    if(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
        add_subdirectory(matlab)
-    endif(IDYNTREE_USES_MATLAB OR GENERATE_MATLAB)
+    endif(IDYNTREE_USES_MATLAB OR IDYNTREE_GENERATE_MATLAB)
 endif(SWIG_FOUND)
 
