[cmake] fix python bindigs compilation

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(CMAKE_SWIG_FLAGS "-Wall;-module;iDynTree;-threads")
 
-set(IDYNTREE_USE_PYTHON_VERSION "" CACHE STRING "Specify python version to use" )
+set(IDYNTREE_USES_PYTHON_VERSION "" CACHE STRING "Specify python version to use" )
 
-find_package(PythonInterp ${IDYNTREE_USE_PYTHON_VERSION} REQUIRED)
-set(IDYNTREE_USE_PYTHON_VERSION_ARGS)
-  if(NOT IDYNTREE_USE_PYTHON_VERSION)
-     set (IDYNTREE_USE_PYTHON_VERSION ${PYTHON_VERSION_STRING})
+find_package(PythonInterp ${IDYNTREE_USES_PYTHON_VERSION} REQUIRED)
+set(IDYNTREE_USES_PYTHON_VERSION_ARGS)
+  if(NOT IDYNTREE_USES_PYTHON_VERSION)
+     set (IDYNTREE_USES_PYTHON_VERSION ${PYTHON_VERSION_STRING})
   endif()
 
-find_package(PythonLibs ${YARP_USE_PYTHON_VERSION} EXACT)
+find_package(PythonLibs ${IDYNTREE_USES_PYTHON_VERSION} EXACT)
 include_directories(${PYTHON_INCLUDE_PATH})
 link_libraries(${PYTHON_LIBRARY})
 
