Rollback swig matlab version to avoid bug in method returning reference to internal attribute
iDynTree makes an intensive use of method returning references to compose different classes
such as SensorsMeasurements or *Semantics. A recent commint in matlab swig broke this
behaviour.. while we work with upstram to solve the issue we can rollback to the lastest
matlab swig version working ( https://github.com/jaeandersson/swig/commit/e435cba21e33c664e8ee75f5f9bd17b245aeb0b7  )

--- a/bindings/matlab/CMakeLists.txt
+++ b/bindings/matlab/CMakeLists.txt
@@ -67,4 +67,5 @@ set_target_properties(${modulename} PROPERTIES PREFIX "" SUFFIX .${Matlab_MEX_EX
 # Install the generated front-end to ${CMAKE_INSTALL_PREFIX}/matlab_tb
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/+iDynTree DESTINATION ${CMAKE_INSTALL_PREFIX}/mex)
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SwigRef.m DESTINATION ${CMAKE_INSTALL_PREFIX}/mex)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/iDynTreesetup.m DESTINATION ${CMAKE_INSTALL_PREFIX}/mex)
 install(TARGETS ${modulename} DESTINATION ${CMAKE_INSTALL_PREFIX}/mex)
