added MX_LIBRARY in required packages for linking bindings

--- a/bindings/matlab/CMakeLists.txt
+++ b/bindings/matlab/CMakeLists.txt
@@ -32,7 +32,9 @@ macro(SWIG_COMPILE_MODULE name language)
 endmacro()
 
 # Find MATLAB
-find_package(Matlab REQUIRED)
+find_package(Matlab 
+             REQUIRED 
+             MX_LIBRARY)
 
 include_directories(${Matlab_INCLUDE_DIRS})
 
