--- a/core-experimental/CMakeLists.txt
+++ b/core-experimental/CMakeLists.txt
@@ -17,8 +17,11 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/IMatrix.h
                               include/iDynTree/Core/RotationRaw.h
                               include/iDynTree/Core/RotationSemantics.h
                               include/iDynTree/Core/RotationalInertiaRaw.h
+                              include/iDynTree/Core/SpatialAcc.h
                               include/iDynTree/Core/SpatialForceVectorRaw.h
                               include/iDynTree/Core/SpatialInertiaRaw.h
+                              include/iDynTree/Core/SpatialInertia.h
+                              include/iDynTree/Core/SpatialMomentum.h
                               include/iDynTree/Core/SpatialMotionVectorRaw.h
                               include/iDynTree/Core/Transform.h
                               include/iDynTree/Core/TransformRaw.h
@@ -40,7 +43,9 @@ set(IDYNTREE_CORE_EXP_SOURCES src/InterfaceDestructors.cpp
                               src/RotationRaw.cpp
                               src/RotationSemantics.cpp
                               src/RotationalInertiaRaw.cpp
+                              src/SpatialAcc.cpp
                               src/SpatialForceVectorRaw.cpp
+                              src/SpatialMomentum.cpp
                               src/SpatialMotionVectorRaw.cpp
                               src/SpatialInertiaRaw.cpp
                               src/Transform.cpp
