--- a/iDynTreeConfig.cmake.in
+++ b/iDynTreeConfig.cmake.in
@@ -20,12 +20,10 @@ set(iDynTree_VERSION @iDynTree_VERSION@)
 
 @PACKAGE_INIT@
 
-set_and_check(iDynTree_INCLUDEDIR "@PACKAGE_iDynTree_INCLUDEDIR@")
-
 if(NOT TARGET iDynTree::idyntree-core)
   include("${CMAKE_CURRENT_LIST_DIR}/iDynTreeTargets.cmake")
 endif()
 
 # Compatibility
 set(iDynTree_LIBRARIES "@iDynTree_TARGETS@")
-set(iDynTree_INCLUDE_DIRS ${iDynTree_INCLUDEDIR} "@EIGEN3_INCLUDE_DIR@" "@Boost_INCLUDE_DIRS@")
+set(iDynTree_INCLUDE_DIRS "@EIGEN3_INCLUDE_DIR@" "@Boost_INCLUDE_DIRS@")
