Added VectorFixSize and specialization Vector3, Vector6, Vector10

--- a/core-experimental/CMakeLists.txt
+++ b/core-experimental/CMakeLists.txt
@@ -28,7 +28,7 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/IMatrix.h
                               include/iDynTree/Core/TransformSemantics.h
                               include/iDynTree/Core/Twist.h
                               include/iDynTree/Core/Utils.h
-                              include/iDynTree/Core/Vector6.h
+                              include/iDynTree/Core/VectorFixSize.h
                               include/iDynTree/Core/VectorDynSize.h
                               include/iDynTree/Core/Wrench.h)
 
@@ -55,7 +55,6 @@ set(IDYNTREE_CORE_EXP_SOURCES src/InterfaceDestructors.cpp
                               src/TransformSemantics.cpp
                               src/Twist.cpp
                               src/Utils.cpp
-                              src/Vector6.cpp
                               src/VectorDynSize.cpp
                               src/Wrench.cpp
                               src/PrivateUtils.cpp)
@@ -66,6 +65,9 @@ SOURCE_GROUP("Header Files" FILES ${IDYNTREE_CORE_EXP_HEADERS})
 
 # share headers with all iDynTree targes
 set_property(GLOBAL APPEND PROPERTY IDYNTREE_TREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
+get_property(IDYNTREE_TREE_INCLUDE_DIRS GLOBAL PROPERTY IDYNTREE_TREE_INCLUDE_DIRS)
+
+include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 
 set(libraryname idyntree-core-exp)
 
