Completed LinearMotionVector3 and AngularMotionVector3 class definitions and inclusions in SpatialMotionVectorRaw class

--- a/core-experimental/CMakeLists.txt
+++ b/core-experimental/CMakeLists.txt
@@ -33,6 +33,8 @@ set(IDYNTREE_CORE_EXP_HEADERS include/iDynTree/Core/IMatrix.h
                               include/iDynTree/Core/VectorDynSize.h
                               include/iDynTree/Core/LinearForceVector3.h
                               include/iDynTree/Core/AngularForceVector3.h
+                              include/iDynTree/Core/LinearMotionVector3.h
+                              include/iDynTree/Core/AngularMotionVector3.h
                               include/iDynTree/Core/Wrench.h)
 
 set(IDYNTREE_CORE_EXP_PRIVATE_INCLUDES include/iDynTree/Core/PrivateUtils.h)
@@ -42,6 +44,8 @@ set(IDYNTREE_CORE_EXP_SOURCES src/InterfaceDestructors.cpp
                               src/MatrixDynSize.cpp
                               src/LinearForceVector3.cpp
                               src/AngularForceVector3.cpp
+                              src/LinearMotionVector3.cpp
+                              src/AngularMotionVector3.cpp
                               src/Position.cpp
                               src/PositionRaw.cpp
                               src/PositionSemantics.cpp
